--- a/Module 2 - Introduction to HTML & CSS/1. Getting Started with HTML/index.html
+++ b/Module 2 - Introduction to HTML & CSS/1. Getting Started with HTML/index.html
@@ -16,5 +16,23 @@
         <a href="location.html">
             <br>Our Location
         </a>
+        <table>
+            <tr>
+                <th>Dish</th>
+                <th>Price</th>            
+            </tr>
+            <tr>
+                <td>Salad</td>
+                <td>$5.00</td>
+            </tr>
+            <tr>
+                <td>Pasta</td>
+                <td>$10.00</td>
+            </tr>
+            <tr>
+                <td>Cake</td>
+                <td>$10.00</td>
+            </tr>
+        </table>
     </body>
 </html>
