--- a/Module 3 - UI Frameworks/1. Intro to UI Frameworks and Libraries/Simple_Bootstrap_Webpage.html
+++ b/Module 3 - UI Frameworks/1. Intro to UI Frameworks and Libraries/Simple_Bootstrap_Webpage.html
@@ -11,7 +11,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col-12 col-lg-6">
                     <h1>Our Menu</h1>
                     <h2>Salad</h2>
                     <p>Lettuce, Vegetables and mozzarella</p>
@@ -23,7 +23,7 @@
                     <p>Flour, Sugar and Dairy</p>
                     <img src="Cake.jpg" class="img-fluid">
                 </div>
-                <div class="col">
+                <div class="col-12 col-lg-6">
                     <h2>Prices</h2>
                     <table class="table">
                         <tr>
