Updated HTML File.
Added some bootstrap components.

--- a/Module 3 - UI Frameworks/1. Intro to UI Frameworks and Libraries/Simple_Bootstrap_Webpage.html
+++ b/Module 3 - UI Frameworks/1. Intro to UI Frameworks and Libraries/Simple_Bootstrap_Webpage.html
@@ -13,19 +13,52 @@
             <div class="row">
                 <div class="col-12 col-lg-6">
                     <h1>Our Menu</h1>
-                    <h2>Salad</h2>
-                    <p>Lettuce, Vegetables and mozzarella</p>
-                    <img src="Salad.jpg" class="img-fluid">
-                    <h2>Pasta</h2>
-                    <p>Eggs, Flour and Sauce</p>
-                    <img src="Pasta.jpeg" class="img-fluid">
-                    <h3>Cake</h3>
-                    <p>Flour, Sugar and Dairy</p>
-                    <img src="Cake.jpg" class="img-fluid">
+                    <div class="row">
+                        <div class="col-12 col-lg-6">
+                            <div class="card">
+                                <img src="Calamari.jpg" class="card-img-top">
+                                <div class="card-body">
+                                    <h2 class="card-title">Fried Calamari <span class="badge bg-primary">New</span></h2>
+                                    <p class="card-text">Squid and buttermilk.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <div class="card">
+                                <img src="Salad.jpg" class="card-img-top">
+                                <div class="card-b">
+                                    <h2 class="card-title">Salad</h2>
+                                    <p class="card-text">Lettuce, Vegetables and mozzarella.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <div class="card">
+                                <img src="Pasta.jpeg" class="card-img-top"> 
+                                <div class="card-b">
+                                    <h2 class="card-title">Pasta</h2>
+                                    <p class="card-text">Eggs, Flour and Sauce.</p>
+                                </div>  
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <div class="card">
+                                <img src="Cake.jpg" class="card-img-top">
+                                <div class="card-b">
+                                    <h3 class="card-title">Cake</h3>
+                                    <p class="card-text">Flour, Sugar and Dairy.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>    
                 </div>
                 <div class="col-12 col-lg-6">
                     <h2>Prices</h2>
                     <table class="table">
+                        <tr>
+                            <td>Fried Calamari</td>
+                            <td>$15.00</td>
+                        </tr>
                         <tr>
                             <td>Salad</td>
                             <td>$7.00</td>
@@ -39,6 +72,9 @@
                             <td>$18.00</td>
                         </tr>
                     </table>
+                    <div class="alert alert-info" role="alert">
+                        Try our new Fried Calamari!
+                    </div>
                 </div>
             </div>
         </div>
